tests/test108.rael.exp
helo
Error [3:5]: 'break' has to be inside a loop
|     break
|     ^
